--- a/resources.html
+++ b/resources.html
@@ -73,6 +73,60 @@ Modernizr.load([
     nope : '_scripts/respond.min.js' 
 }
 ]); 
+		
+		
+		//const $originalLeaveDates = $('.original-leave-dates]');	
+
+		/*if ($('.original-leave-dates').length > 0 && $('.original-leave-dates').attr("data-dependency-active") === 'true') {		
+
+			$("label[for='Newreturntoworkdate']").text("some value");
+
+		}*/
+		
+	/*	if ($('.original-leave-dates').attr('data-dependency-active') == 'true' ) {
+			$("label[for='Newreturntoworkdate']").text("some value");
+		}*/
+		
+		
+
+		//$('.original-leave-dates').each(function(){
+
+			/*if ( $('.original-leave-dates').css('display') === 'block')
+			{
+				$("label[for='Newreturntoworkdate']").text("some value");
+
+			} 
+			
+			else if ( $('.original-leave-dates').css('display') === 'none') {
+
+				$("label[for='Newreturntoworkdate']").text("some shit");
+
+			}*/	
+
+		//});
+	
+
+		/*function fixLabel(){
+
+			const $activeInnerPage = $('.page_container.active');
+
+			$activePage.find('#original-leave-dates').each(function() {
+
+				var originalDates = $('#original-leave-dates')
+				var isVisible = originalDates.is(':visible')
+
+				if (isVisible === true){
+					$("label[for='Newreturntoworkdate']").text("some value");
+				} else {
+					$("label[for='Newreturntoworkdate']").text("some shit");
+				}
+
+			}
+		}*/
+			
+
+		
+		
 </script>
     </body>
 </html>
